--- a/main.css
+++ b/main.css
@@ -1,5 +1,8 @@
 header {
-    position: relative;
-    width: auto;
-    height: 100%;
+    width: 200px; 
+    height: 400px; 	
+    margin: 0; 
+    padding: 0; 
+    border: 0; 
+    float: left;
 }
