--- a/main.css
+++ b/main.css
@@ -1,13 +1,17 @@
 div.header {
-    width: 35%; 
-    height: 100%; 	
-    margin: 0; 
-    padding: 0; 
-    border: 0; 
+    width: 35%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
     float: left;
     background: url(resources/images/backgroundSide.png);
 }
 
-div.container { 
+div.container {
     width: 900px; margin: 0; padding: 0;
+}
+
+div.content {
+  width: 700px; height: 400px; 	margin: 0; padding: 0; border: 0; float: left; background: #FFFFFF;
 }
