--- a/main.css
+++ b/main.css
@@ -1,10 +1,5 @@
 div.header {
-    width: 35%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    float: left;
+    width: 200px; height: 400px; 	margin: 0; padding: 0; border: 0; float: left;
     background: url(resources/images/backgroundSide.png);
 }
 
