--- a/main.css
+++ b/main.css
@@ -1,17 +1,34 @@
-div.header {
-    width: 40%;
+body {
+  margin: 0;
+  padding: 0;
+}
+ div.header {
+    width: 30%;
     height: 100%;
     margin: 0;
     padding: 0;
     border: 0;
     float: left;
     background: url(resources/images/backgroundSide.png);
+    text-align: center;
 }
+
 
 div.container {
     width: 900px; margin: 0; padding: 0;
 }
 
 div.content {
-  width: 60%; height: 100%; 	margin: 0; padding: 0; border: 0; float: right; background: #FFFFFF;
+  width: 70%; height: 100%; 	margin: 0; padding: 0; border: 0; float: right; background: #FFFFFF;
+}
+.logo {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  width: 96;
+  height: 96;
+  margin: auto;
+}
+.square {
+  border-radius: 2px;
 }
