--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ div.header-wrapper {
   width: 100%;
   height: 100%;
   padding: 0 20px;
-      color: #ddd
+      color: #FFFFFF
 }
 div.section {
   position: relative;
